--- a/index.css
+++ b/index.css
@@ -17,15 +17,17 @@ main div:nth-child(1){
     width: 25%;
     border: 1px solid rgb(48, 48, 48);
     height: 100%;
+    color: ghostwhite;
 }
 main div:nth-child(2){
     width: 45%;
-
+    color: ghostwhite;
 }
 main div:nth-child(3){
     width: 30%;
     border: 1px solid rgb(48, 48, 48);
-    height: 100%
+    height: 100%;
+    color: ghostwhite;
 }
 main div{
     text-align: center;
@@ -36,13 +38,26 @@ main div{
 .playerList > section > p:nth-child(1){
     background-color: rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(5px);
-    color: rgb(0, 0, 0);
+    color: ghostwhite;
     font-size: medium;
     padding: 5px 0px;
+    text-transform: uppercase;
 }
 .playerList > section > .cover{
     width: 100%;
     height: calc(100% - 28.4px);
     overflow-y :scroll;
     color: white;
+}
+
+
+/*second part of the dashboard , middle part*/
+.disk > .diskrun{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+.disk > .diskrun >img{
+    width: 110%;
 }
