--- a/index.css
+++ b/index.css
@@ -28,9 +28,31 @@ main div:nth-child(3){
     border: 1px solid rgb(48, 48, 48);
     height: 100%;
     color: ghostwhite;
+    border-top-width: 0px;
+    border-right-width: 0px;
+    border-bottom-width: 0px;
+    border-left-width: 0px;
+
 }
-main div{
+main > div{
     text-align: center;
+    border-top-width: 0px;
+    border-right-width: 0px;
+    border-bottom-width: 0px;
+    border-left-width: 0px;
+
+}
+main > div:nth-child(3) >h1{
+    backdrop-filter: blur(5px);
+    border-bottom: 2px solid rgba(168, 168, 168, 0.582);
+    
+
+}
+.playerList{
+    border-top-width: 0px;
+    border-right-width: 0px;
+    border-bottom-width: 0px;
+    border-left-width: 0px;
 }
 .playerList  > section {
     height: 25%;
@@ -64,15 +86,13 @@ main div{
 
 /*third part of the lyrics , last part*/
 .lyrics{
-    width: 98% !important;
+    width: 100% !important;
     display: flex;
-    justify-content: center;
     overflow-y: scroll;
     height: calc(100% - 37px);
 }
 .lyrics > table{
     width: 95%;
-    /* border: 1px solid yellow; */
     padding-top: 7px;
 }
 .lyrics > table > tbody >tr{
@@ -80,6 +100,8 @@ main div{
     padding: 9px 0px;
     justify-content: end;
 }
-.lyrics > table > tbody >tr > td{
+.lyrics > table > tbody >tr > td > p{
     font-size: 130%;
+    text-align: right;
+    direction: rtl;
 }
